# kaccounts-integration

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  Messages.sh  README  README.md  TODO
src/: CMakeLists.txt  accountwidget.cpp  accountwidget.h  create.cpp  create.h  kaccounts.cpp  kaccounts.h  kcm.ui  kcm_kaccounts.desktop  kcm_kdeaccounts.desktop  owncloudDialog.ui  providerconfig.cpp  providerconfig.h  services.ui  types.ui  uipluginsmanager.cpp  uipluginsmanager.h  webaccounts.cpp  webaccounts.desktop  webaccounts.h
src/daemon/: CMakeLists.txt  accounts-daemon.desktop  accounts.desktop  akonadiaccounts.cpp  akonadiaccounts.h  changesettingsjob.cpp  changesettingsjob.h  createresource.cpp  createresource.h  daemon.cpp  daemon.h  dbussettingspathjob.cpp  dbussettingspathjob.h  fetchsettingsjob.cpp  kded_accounts.json  removeresource.h  setaccountid.cpp  setaccountid.h
src/daemon/akonadi/: akonadiaccounts.cpp  akonadiaccounts.h  akonadiservices.cpp  akonadiservices.h
src/daemon/jobs/: abstractakonadijob.h  changesettingsjob.cpp  changesettingsjob.h  createresource.cpp  createresource.h  createresourcejob.cpp  createresourcejob.h  dbussettingsinterfacejob.cpp  dbussettingsinterfacejob.h  enableservicejob.cpp  enableservicejob.h  fetchsettingsjob.cpp  fetchsettingsjob.h  lookupakonadiservices.cpp  lookupakonadiservices.h  removeakonadiservicesjob.cpp  removeakonadiservicesjob.h  removeresource.cpp  removeresource.h  removeresourcejob.cpp  removeresourcejob.h
src/daemon/kio/: createkioservice.cpp  createkioservice.h  createnetattachjob.cpp  createnetattachjob.h  kioservices.cpp  kioservices.h  removekioservice.cpp  removekioservice.h  removenetattachjob.cpp  removenetattachjob.h
src/daemon/kio-webdav/: createkioservice.h  createnetattachjob.cpp  createnetattachjob.h  kioservices.cpp  removekioservice.h  removenetattachjob.cpp  removenetattachjob.h
src/daemon/plugins/: CMakeLists.txt
src/declarative/: CMakeLists.txt  kaccountsdeclarativeplugin.cpp  kaccountsdeclarativeplugin.h  qmldir
src/facebook/: faccountwidget.cpp  faccountwidget.h  facebook.cpp  facebook.h  fcredentials.cpp  fcredentials.h  foauth.cpp  foauth.h  foauth.ui  fservices.cpp
src/facebook/jobs/: fcreatechat.cpp  fcreatechat.h  fcreatepim.cpp  fcreatepim.h  org.kde.Akonadi.Facebook.Settings.xml
src/facebook/pages/: fcredentials.cpp  fcredentials.h  foauth.cpp  foauth.h  foauth.ui  fservices.cpp  fservices.h
src/google/: credentials.cpp  credentials.h  credentials.ui  google.cpp  google.h  google.ui  oauth.cpp  oauth.ui  serviceoption.cpp  serviceoption.h  serviceoption.ui  services.cpp  services.h  services.ui
src/google/jobs/: createcalendar.cpp  createcalendar.h  createchat.cpp  createchat.h  createcontact.cpp  createcontact.h  createmail.cpp  createmail.h  createtask.cpp  createtask.h  org.kde.Akonadi.GoogleCalendar.Settings.xml  org.kde.Akonadi.GoogleContacts.Settings.xml  org.kde.Akonadi.Imap.Settings.xml  removecalendar.cpp  removecalendar.h  removechat.cpp  removechat.h  removeemail.cpp  removeemail.h  removetask.cpp
src/google/pages/: credentials.cpp  credentials.h  credentials.ui  oauth.cpp  oauth.h  oauth.ui  serviceoption.cpp  serviceoption.h  serviceoption.ui  services.cpp  services.h  wallet.cpp  wallet.h  wallet.ui
src/jobs/: accountservicetoggle.cpp  accountservicetoggle.h  accountservicetogglejob.h  checkowncloudhostjob.cpp  checkowncloudhostjob.h  createaccount.cpp  createaccount.h  createaccountjob.cpp  createaccountjob.h  createcalendar.cpp  createcalendar.h  createchat.cpp  createchat.h  createcontact.cpp  createcontact.h  createmail.cpp  createmail.h  createtask.cpp  createtask.h  fcreatechat.cpp  fremovechat.h  getcredentials.cpp  getcredentials.h  getcredentialsjob.cpp  getcredentialsjob.h  ocreatecalendar.cpp  ocreatecontact.cpp  ocreatecontact.h  ocreatefile.cpp  ocreatefile.h  oremovecalendar.cpp  oremovecalendar.h  oremovecontact.cpp  ownclouddialog.cpp  ownclouddialog.h  removeakonadiresource.cpp  removeakonadiresource.h  removecalendar.cpp  removechat.cpp  removeemail.cpp  (+2 more)
src/kcm/: CMakeLists.txt  accounts.cpp  accounts.h  kcm_kaccounts.desktop  kcm_kaccounts.json
src/kcm/package/: metadata.desktop
src/kcm/ui/: AccountDetails.qml  AvailableAccounts.qml  MessageBoxSheet.qml  RemoveAccountDialog.qml  RenameAccountDialog.qml  main.qml
src/kded/: CMakeLists.txt  kded_accounts.cpp  kded_accounts.h  kded_accounts.json
src/kded/kio-webdav/: CMakeLists.txt  createkioservice.cpp  createnetattachjob.h  kioservices.h  removekioservice.cpp  removekioservice.h  removenetattachjob.cpp
src/lib/: CMakeLists.txt  KAccountsConfig.cmake.in  KAccountsMacros.cmake  accountservicetogglejob.cpp  accountservicetogglejob.h  accountsmodel.cpp  accountsmodel.h  changeaccountdisplaynamejob.cpp  changeaccountdisplaynamejob.h  core.cpp  core.h  createaccountjob.cpp  createaccountjob.h  getcredentialsjob.cpp  getcredentialsjob.h  kaccounts_export.h  kaccountsdplugin.cpp  kaccountsdplugin.h  kaccountsuiplugin.cpp  kaccountsuiplugin.h  providersmodel.cpp  providersmodel.h  removeaccountjob.cpp  removeaccountjob.h  servicesmodel.cpp  servicesmodel.h  uipluginsmanager.cpp  uipluginsmanager.h
src/lib/cmake/: CMakeLists.txt  (+1 more)
src/models/: accountsmodel.cpp  accountsmodel.h  modeltest.cpp
src/owncloud/: CMakeLists.txt  basicinfo.cpp  basicinfo.h  basicinfo.ui  connecting.cpp  connecting.h  connecting.ui  oaccountwidget.cpp  oaccountwidget.h  oservices.cpp  oservices.h  owncloud.cpp  owncloud.h  qmlhelper.cpp  qmlhelper.h
src/plugins/: CMakeLists.txt
src/runnerid/: runnerid.cpp  runnerid.h
tests/: CMakeLists.txt  fakeresource.cpp  fakeresource.h  testakonadiaccounts.cpp  testchangesettingsjob.cpp  testcreatenetattachjob.cpp  testdbussettingsjob.cpp  testenableservicejob.cpp  testfetchsettingsjob.cpp  testnetattachjobs.cpp  testproviderconfig.cpp  testremovenetattachjob.cpp
tests/data/: MyProvider.provider  MyService.service  MyService2.service  facebook.provider  sip.provider
tests/providers/: twitter.provider
(+141 files in other folders)
